--- a/sass/modal.scss
+++ b/sass/modal.scss
@@ -1088,6 +1088,276 @@
       background-position: -85px -192px;
     }
   }
+  &_zag{
+    width: 100%;
+    font: 28px/96px 'robotoregular';
+    color: #243739;
+    float: left;
+  }
+  &_enter{
+    float: left;
+    width: 37.1%;
+    padding-left: 3.4%;
+    padding-right: 2.8%;
+    box-sizing: border-box;
+    @media(max-width: 688px){
+      width: 100%;
+      margin-bottom: 20px;
+    }
+    &_form{
+      float: left;
+      width: 100%;
+      input{
+        width: 100%;
+        height:46px;
+        font: 14px/20px 'Roboto-Medium';
+        margin-bottom: 10px;
+        border: 1px solid #3b6e8b;
+        @include radius(4px);
+        padding-left: 46px;
+        box-sizing: border-box;
+      }
+      .meil{
+        background: url("../img/temp_sprite/meil.png") left center no-repeat;
+      }
+      .password{
+        background: url("../img/temp_sprite/look.png") left center no-repeat;
+        margin-bottom: 0px;
+      }
+      .recall{
+        float: left;
+        width: 100%;
+        font: 11px/30px 'robotobold';
+        text-align: right;
+        text-decoration: underline;
+        color: #003c95;
+        &:hover{
+          color: #620909;
+        }
+      }
+      .submit{
+        float: left;
+        width: 100%;
+        height: 44px;
+        font: 18px/42px 'robotobold';
+        text-transform: uppercase;
+        text-align: center;
+        color: #024753;
+        border: 1px solid #e3e3e3;
+        @include radius(4px);
+        &:hover{
+          color: #620909;
+          border-color: #003c95;
+          span{
+            background: none;
+          }
+        }
+        span{
+          background: url("../img/dotted.png") left bottom repeat-x;
+        }
+      }
+    }
+    .or{
+      width: 100%;
+      margin-top: 9px;
+      font: 18px/47px 'robotobold';
+      text-transform: uppercase;
+      text-align: center;
+      color: #c0c0c0;
+    }
+    &_soc_line {
+      float: left;
+      width: 100%;
+      p {
+        float: left;
+        width: 100%;
+        font: 15px/20px 'robotoregular';
+        text-align: center;
+      }
+      &_block {
+        width: 100%;
+        float: left;
+        text-align: center;
+        margin-top: 10px;
+        a {
+          display: inline-block;
+          @include radius(50%);
+          width: 47px;
+          height: 47px;
+          margin-right: 10px;
+          &:nth-last-child(1) {
+            margin-right: 0px;
+          }
+        }
+        .soc1 {
+          background-image: url("../img/sprite_section.png");
+          background-position: -241px 0px;
+        }
+        .soc2 {
+          background-image: url("../img/sprite_section.png");
+          background-position: -241px -47px;
+        }
+        .soc3 {
+          background-image: url("../img/sprite_section.png");
+          background-position: -241px -94px;
+        }
+        .soc4 {
+          background-image: url("../img/sprite_section.png");
+          background-position: -241px -141px;
+          -webkit-box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.08);
+          -moz-box-shadow:    0px 3px 7px 0px rgba(0, 0, 0, 0.08);
+          box-shadow:         0px 3px 7px 0px rgba(0, 0, 0, 0.08);
+        }
+        .soc5 {
+          background-image: url("../img/sprite_section.png");
+          background-position: 0px -210px;
+        }
+      }
+    }
+  }
+  &_reg{
+    float: left;
+    width: 62.9%;
+    min-height: 426px;
+    background: url("../img/reg.jpg") center top no-repeat;
+    border-left: 1px solid #FFFFFF;
+    border-right: 1px solid #FFFFFF;
+    box-sizing: border-box;
+    -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.21);
+    -moz-box-shadow:    0px 0px 5px 0px rgba(0, 0, 0, 0.21);
+    box-shadow:         0px 0px 5px 0px rgba(0, 0, 0, 0.21);
+    padding-left: 2.93%;
+    padding-right: 2.8%;
+    background-size: cover;
+    box-sizing: border-box;
+    @media(max-width: 688px){
+      width: 100%;
+    }
+    &_form{
+      width: 100%;
+      &_info{
+        float: left;
+        width: 100%;
+        input{
+          width: 48%;
+          height:46px;
+          float: left;
+          font: 14px/20px 'Roboto-Medium';
+          margin-bottom: 10px;
+          border: 1px solid #3b6e8b;
+          @include radius(4px);
+          padding-left: 46px;
+          box-sizing: border-box;
+          margin-bottom: 10px;
+          &:nth-child(even){
+            float: right;
+          }
+       }
+        .name{
+          background:url("../img/piple.jpg") 17px center no-repeat,url("../img/star.jpg") right top no-repeat,#FFFFFF;
+        }
+        .patronymic{
+          background:url("../img/piple.jpg") 17px center no-repeat,#FFFFFF;
+        }
+        .tel{
+          background:url("../img/tel.jpg") 17px center no-repeat,url("../img/star.jpg") right top no-repeat,#FFFFFF;
+        }
+        .emeil{
+          background:url("../img/temp_sprite/meil.png") left top no-repeat,url("../img/star.jpg") right top no-repeat,#FFFFFF;
+        }
+      }
+      &_password{
+        float: left;
+        width: 100%;
+        &_zag{
+          float: left;
+          width: 100%;
+          font: 14px/30px 'robotoregular';
+          text-align: center;
+          margin-bottom: 8px;
+        }
+        input{
+          width: 48%;
+          height:46px;
+          float: left;
+          font: 14px/20px 'Roboto-Medium';
+          margin-bottom: 10px;
+          border: 1px solid #3b6e8b;
+          @include radius(4px);
+          padding-left: 46px;
+          box-sizing: border-box;
+          margin-bottom: 10px;
+          background:url("../img/temp_sprite/look.png") left top no-repeat,url("../img/star.jpg") right top no-repeat,#FFFFFF;
+          &:nth-child(even){
+            float: right;
+          }
+        }
+      }
+      &_chek_line{
+        width: 100%;
+        float: left;
+        margin-top: 8px;
+        margin-bottom: 18px;
+        .check_form {
+          float: left;
+          width: 26px;
+          height: 26px;
+          border: 1px solid #024753;
+          border-radius: 4px;
+          -moz-border-radius: 4px;
+          -webkit-border-radius: 4px;
+          text-align: center;
+          margin-right: 12px;
+          span {
+            display: inline-block;
+            width: 17px;
+            height: 16px;
+            margin-top: 4px;
+          }
+        }
+        .activ{
+          span {
+            background-image: url("../img/sprite_section.png");
+            background-position: -34px -192px;
+          }
+        }
+        p{
+          float: left;
+          font: 11px/15px 'robotoregular';
+          color: #272727;
+          width: 94%;
+
+        }
+      }
+      .submit {
+        clear: both;
+        width: 100%;
+        max-width: 324px;
+        height: 44px;
+        margin: 0 auto;
+        font: 18px/42px 'robotobold';
+        text-transform: uppercase;
+        text-align: center;
+        color: #024753;
+        border: 1px solid #e3e3e3;
+        border-top-color: rgb(227, 227, 227);
+        border-right-color: rgb(227, 227, 227);
+        border-bottom-color: rgb(227, 227, 227);
+        border-left-color: rgb(227, 227, 227);
+        margin-bottom: 20px;
+       @include radius(4px);
+        background: #FFFFFF;
+        display: block;
+        span {
+          background: url("../img/dotted.png") left bottom repeat-x;
+        }
+        &:hover {
+          color: #620909;
+          border-color: #003c95;
+        }
+      }
+    }
+  }
 }
 
 /*********************Стили модальных окон окончание*********************************************/
