--- a/css/modal.css
+++ b/css/modal.css
@@ -865,7 +865,8 @@
   -webkit-box-shadow: 0px -3px 10px 0px rgba(0, 0, 0, 0.24);
   -moz-box-shadow: 0px -3px 10px 0px rgba(0, 0, 0, 0.24);
   box-shadow: 0px -3px 10px 0px rgba(0, 0, 0, 0.24);
-  z-index: 99; }
+  z-index: 99;
+  display: none; }
   .enter_block .close {
     display: block;
     position: absolute;
@@ -1120,6 +1121,119 @@
         .enter_block_reg_form .submit:hover {
           color: #620909;
           border-color: #003c95; }
+
+.thenk_block {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  max-width: 1029px;
+  min-height: 435px;
+  background: url("../img/thenk.jpg") right top no-repeat #FFFFFF;
+  z-index: 99;
+  padding-left: 28px;
+  box-sizing: border-box;
+  display: none; }
+  .thenk_block .close {
+    display: block;
+    position: absolute;
+    top: -16.5px;
+    right: -16.5px;
+    width: 33px;
+    height: 33px;
+    border-radius: 50%;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    background: #FFFFFF;
+    text-align: center; }
+    .thenk_block .close i {
+      display: inline-block;
+      width: 15px;
+      height: 15px;
+      margin-top: 9px;
+      background-image: url("../img/sprite_section.png");
+      background-position: -85px -192px; }
+  .thenk_block__adres {
+    float: left;
+    width: 100%;
+    margin-top: 25px;
+    padding-left: 60px;
+    box-sizing: border-box; }
+    .thenk_block__adres p {
+      font: 16px/18px 'robotobold';
+      color: #393939;
+      float: left;
+      letter-spacing: 0.3px; }
+    .thenk_block__adres a {
+      font: 15px/18px 'Roboto-Medium';
+      text-decoration: underline;
+      color: #003c95;
+      float: left;
+      margin-left: 30px; }
+      .thenk_block__adres a i {
+        float: left;
+        margin-right: 12px;
+        width: 13px;
+        height: 18px;
+        background-image: url("../img/temp_sprite/marker.png");
+        background-position: center; }
+  .thenk_block_logo {
+    float: left;
+    width: 100%;
+    margin-top: 10px; }
+    .thenk_block_logo a {
+      float: left; }
+      .thenk_block_logo a img {
+        float: left;
+        max-width: 100%; }
+      .thenk_block_logo a p {
+        float: left;
+        width: 100%;
+        font: 24px/24px 'robotobold';
+        color: #393939;
+        margin-top: 15px;
+        letter-spacing: 0.9px; }
+  .thenk_block_thenk_box {
+    width: 100%;
+    float: left;
+    padding-left: 194.5px;
+    box-sizing: border-box;
+    background: url("../img/logo2.png") left center no-repeat;
+    font-family: 'robotoBlack';
+    color: #393939;
+    min-height: 164px; }
+    .thenk_block_thenk_box h3 {
+      font-size: 42px;
+      line-height: 42px;
+      margin-top: 70px; }
+    .thenk_block_thenk_box p {
+      font-size: 18px;
+      line-height: 28px;
+      letter-spacing: -0.2px;
+      margin-top: 5px; }
+      .thenk_block_thenk_box p span {
+        color: #990000; }
+  .thenk_block_footer {
+    float: left;
+    width: 100%;
+    margin-top: 28px;
+    padding-right: 29px;
+    box-sizing: border-box;
+    letter-spacing: 0.65px; }
+    .thenk_block_footer a {
+      float: left;
+      padding-left: 26px;
+      background: url("../img/tel.jpg") left center no-repeat;
+      font: 15px/16px 'Roboto-Medium';
+      text-decoration: underline;
+      color: #003c95; }
+      .thenk_block_footer a:hover {
+        color: #620909; }
+    .thenk_block_footer p {
+      float: right;
+      font: 18px/16px 'Roboto-Medium'; }
+      .thenk_block_footer p span {
+        color: #990000; }
 
 /*********************Стили модальных окон окончание*********************************************/
 .modal_fon {
