Слайдер комментариев. Начало.

--- a/sass/modal.scss
+++ b/sass/modal.scss
@@ -1372,6 +1372,7 @@
   padding-left: 28px;
   box-sizing: border-box;
   display: none;
+
   .close {
     display: block;
     position: absolute;
@@ -1490,6 +1491,9 @@
     }
   }
 }
+/********************Комментарии**********************************************************/
+@import "comment";
+/*****************************************************************************************/
 
 /*********************Стили модальных окон окончание*********************************************/
 .modal_fon {
