--- a/css/comment.css
+++ b/css/comment.css
@@ -1,13 +1,12 @@
 .comment_block {
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 20px;
+  left: 20px;
   width: 100%;
   max-width: 1170px;
   min-height: 550px;
   background: #ffffff;
   z-index: 99;
-  top: 20px;
   -webkit-box-shadow: 0px -3px 10px 0px rgba(0, 0, 0, 0.24);
   -moz-box-shadow: 0px -3px 10px 0px rgba(0, 0, 0, 0.24);
   box-shadow: 0px -3px 10px 0px rgba(0, 0, 0, 0.24); }
@@ -53,11 +52,15 @@
   .comment_block .individuals_block {
     width: 100%;
     float: left;
-    position: relative; }
+    position: relative;
+    padding-top: 28px;
+    padding-bottom: 28px;
+    border: 1px solid #cdcdcd;
+    border-top: none; }
     .comment_block .individuals_block_slide {
       width: 100%;
       float: left;
-      padding: 0px 5.5%;
+      padding: 0px 5.8%;
       box-sizing: border-box; }
       .comment_block .individuals_block_slide_header {
         width: 100%;
@@ -92,3 +95,95 @@
               font: 12px/24px 'robotoregular';
               color: #888888;
               margin-top: 20px; }
+        .comment_block .individuals_block_slide_header_yandex_block {
+          float: left;
+          width: 50%;
+          border: 2px solid #024753;
+          box-sizing: border-box;
+          min-height: 110px; }
+          .comment_block .individuals_block_slide_header_yandex_block_comment {
+            float: left;
+            margin-top: 2.5px; }
+          .comment_block .individuals_block_slide_header_yandex_block_baner_yandex {
+            float: right;
+            display: block;
+            width: 40%;
+            margin-top: 15.5px;
+            margin-right: 5%; }
+            .comment_block .individuals_block_slide_header_yandex_block_baner_yandex img {
+              max-width: 100%; }
+      .comment_block .individuals_block_slide_content {
+        float: left;
+        width: 100%;
+        padding-top: 20px; }
+        .comment_block .individuals_block_slide_content p {
+          font: 12px/18px 'robotolight';
+          color: #282828;
+          letter-spacing: 0.5px; }
+        .comment_block .individuals_block_slide_content .text_block {
+          width: 100%;
+          float: left;
+          position: relative; }
+          .comment_block .individuals_block_slide_content .text_block .all_read {
+            font: 10px/20px 'Georgia-BoldItalic';
+            font-style: italic;
+            position: absolute;
+            right: 20px;
+            bottom: 0px;
+            color: #003c95;
+            text-decoration: underline;
+            display: none; }
+            .comment_block .individuals_block_slide_content .text_block .all_read:hover {
+              color: #620909; }
+        .comment_block .individuals_block_slide_content .text_wrap {
+          width: 100%;
+          float: left;
+          overflow: hidden;
+          box-sizing: border-box; }
+        .comment_block .individuals_block_slide_content .big {
+          padding-bottom: 20px; }
+          .comment_block .individuals_block_slide_content .big .all_read {
+            display: block; }
+        .comment_block .individuals_block_slide_content .main_wrap {
+          height: 54px; }
+        .comment_block .individuals_block_slide_content_main {
+          width: 100%; }
+        .comment_block .individuals_block_slide_content_detail {
+          width: 100%;
+          padding: 20px 0px;
+          background: url("../img/line2.png") left bottom repeat-x;
+          float: left; }
+          .comment_block .individuals_block_slide_content_detail h3 {
+            float: left;
+            font: 14px/18px 'robotoBlack'; }
+          .comment_block .individuals_block_slide_content_detail p {
+            float: right;
+            width: 90%; }
+          .comment_block .individuals_block_slide_content_detail .detail_wrap {
+            height: 72px; }
+          .comment_block .individuals_block_slide_content_detail_worth {
+            float: left;
+            width: 100%; }
+            .comment_block .individuals_block_slide_content_detail_worth h3 {
+              color: #1c7d09; }
+          .comment_block .individuals_block_slide_content_detail_limitations {
+            float: left;
+            width: 100%;
+            margin-top: 20px; }
+            .comment_block .individuals_block_slide_content_detail_limitations h3 {
+              color: #e81e1e; }
+        .comment_block .individuals_block_slide_content_quality {
+          float: left;
+          width: 100%; }
+          .comment_block .individuals_block_slide_content_quality_zag {
+            width: 100%;
+            float: left; }
+            .comment_block .individuals_block_slide_content_quality_zag h3 {
+              float: left;
+              width: 100%;
+              font: 20px/40px 'robotobold';
+              color: #2d2d2d;
+              margin: 22px 0px; }
+              .comment_block .individuals_block_slide_content_quality_zag h3 a {
+                display: inline-block;
+                margin-right: 12px; }
